app/assets/stylesheets/components/comment.scss
.comment {
  list-style-type: none;
  margin-block: .5rem;
  display: flex;
  align-items: flex-start;
  gap: 1rem;

  &_top {
    display: flex;
    align-items: center;
    gap: .5rem;
  }

  &_content {
    min-width: 40%;
    width: fit-content;
    overflow-wrap: break-word;
    background-color: var(--accent-bg-color);
    border-radius: var(--border-radius);
    padding: .5rem;
    position: relative;

    &_reaction_count {
      position: absolute;
      right: 0;
      bottom: 0;
      transform: translate(25%, 50%);
      background-color: inherit;
      border-radius: 50%;
      font-size: .8rem;
      padding: .2rem;
      width: auto;
    }
  }

  &_reactions {
    display: flex;
    gap: .5rem;
    list-style: none;
    margin: 0;
    padding: 0;
  }

  &_reacted {
    color: var(--secondary-bg-color);
  }
}

